--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Website!</title>
+	<title>Michael Muinos</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -33,14 +33,16 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1 id="jumbotron-header">Hello, my name is Michael Muinos.</h1>
+			<h1 id="dynamic-header">Programmer</h2>
 			<p id="jumbotron-desc">Girlfriend, cats, and programming sums up my day pretty nicely.
 			</p>
 		</div>
 	</div>
 
-	<div class="row" id="intro-wrapper">
-		<div class="col-xs-12 col-md-9" id="introduction">
-			<h1>Introduction</h1>
+	<div id="intro-wrapper" class="row">
+		<h1>Introduction</h1>
+		<div class="col-md-1"></div>
+		<div class="col-xs-12 col-md-7" id="introduction">
 			<p>Welcome to my portfolio site! I am a 4th year Computer Science student at California State Polytechnic University in Pomona, California. I am currently working part-time as a Software Development intern and am looking for further internships before graduation. After graduation, I plan to immediately start my job hunt to look for likeminded individuals to work with.</p>
 			<p>If you continue on, you will find information on some personal projects I have done, take a look at my most up to date resume, and find my contact information.</p>
 			<h3>Thank you!</h3>
@@ -48,6 +50,7 @@
 		<div class="col-xs-12 col-md-3" id="image-container">
 			<img height="300px" width="300px" src="images/me.jpg">
 		</div>
+		<div class="col-md-1"></div>
 	</div>
 
 	<div style="background-color: #eee; overflow: auto;" id="projects-wrapper">
@@ -65,14 +68,14 @@
 			</div>
 		</div>
 		<div style="margin: 0 auto; padding: 25px; max-width: 1100px; background-color: #FFFFFF;">
-			<h5>A fun clicker game with a zombie infested theme built entirely for the android platform. I really enjoyed the original <a href="http://orteil.dashnet.org/cookieclicker/">cookie clicker</a> game, so this was my version of the game. It has achievements, statistics, and a nice UI to it!</h5>
-			<p>What I Learned:</p>
-			<ul>
+			<h5 class="project-description">A fun clicker game with a zombie infested theme built entirely for the android platform. I really enjoyed the original <a href="http://orteil.dashnet.org/cookieclicker/">cookie clicker</a> game, so this was my version of the game. It has achievements, statistics, and a nice UI to it!</h5>
+			<p class="project-description">What I Learned:</p>
+			<ul class="project-description">
 				<li>How to work with Android Studio</li>
 				<li>Implementing sound, animation, and vibration components to an android application</li>
 				<li>Designing for various screen sizes</li>
 			</ul>
-			<p>The game can be downloaded at <a href="https://play.google.com/store/apps/details?id=com.justplaingoatapps.clicker">https://play.google.com/store/apps/details?id=com.justplaingoatapps.clicker</a>&nbsp&nbsp:)
+			<p class="project-description">The game can be downloaded at <a href="https://play.google.com/store/apps/details?id=com.justplaingoatapps.clicker">https://play.google.com/store/apps/details?id=com.justplaingoatapps.clicker</a>&nbsp&nbsp:)
 		</div>
 
 		<hr>
@@ -90,29 +93,218 @@
 			</div>
 		</div>
 		<div style="margin: 0 auto; padding: 25px; max-width: 1100px; background-color: #FFFFFF;">
-			<h5>A fun clicker game with a zombie infested theme built entirely for the android platform. I really enjoyed the original <a href="http://orteil.dashnet.org/cookieclicker/">cookie clicker</a> game, so this was my version of the game. It has achievements, statistics, and a nice UI to it!</h5>
-			<p>What I Learned:</p>
-			<ul>
-				<li>How to work with Android Studio</li>
-				<li>Implementing sound, animation, and vibration components to an android application</li>
-				<li>Designing for various screen sizes</li>
+			<h5 class="project-description">An entertainment app that lets you look at thousands of categorized facts. Some features include a nice swipe left/right feature for easy readability, a daily fact updated each day, a favoriting system to view only the facts you enjoy the most, and finally a statistics area to see all the knowledge you have gained!</h5>
+			<p class="project-description">What I Learned:</p>
+			<ul class="project-description">
+				<li>How to build a custom web crawler in Eclipse using a Java HTML Parser</li>
+				<li>How to organize my data into a PostgreSQL database and execute commands using JDBC</li>
+				<li>Creating a variety of PHP scripts in PhpStorm to return JSON formatted objects</li>
+				<li>Understanding of HTTP methods and how to use an HTTP Client library</li> 
 			</ul>
-			<p>The app can be downloaded at <a href="https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts">https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts</a>&nbsp&nbsp:)
+			<p class="project-description">The app can be downloaded at <a href="https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts">https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts</a>&nbsp&nbsp:)
 		</div>
 
-		<hr>
-
-	</div>
+		<div style="background-color: #ddd; overflow: auto; margin-top: 50px;" id="resume-wrapper">
+			<h1 style="color: #000000;">Resume</h1>
+			<div style="margin: 0 auto; width: 900px;">
+				<p style="margin-top: 50px;">Education</p>
+				<hr>
+				<p><b>California Polytechnic State University</b>
+					<span style="float: right;">
+						<i>Expected: March 2017<i>
+					</span>
+				</p>
+				<p><b>Bachelor of Science in Computer Science</b>
+					<span style="float: right;">
+						<i>Pomona, California</i>
+					</span>				
+				</p>
+				<p><b>GPA: 3.51 - Dean's List<b></p>
+				<p style="margin-top: 20px;">Related Courses</p>
+				<ul>
+					<!-- on hover of li's, say a message whether you liked it or not -->
+					<li>Data Structures and Algorithms I</li>
+					<li>Data Structures and Algorithms II</li>
+					<li>C++ Programming</li>
+					<li>Computer Logic</li>
+					<li>Computer Organization and Assembly Programming</li>
+					<li>Design and Analysis of Algorithms</li>
+					<li>Language Translation and Automata</li>
+					<li>Programming Graphical User Interfaces</li>
+					<li>Python Programming</li>
+					<li>Numerical Methods</li>
+				</ul>
+				<p style="margin-top: 50px;">Skills</p>
+				<hr>
+				<table>
+					<caption>Languages and Frameworks</caption>
+						<tr>
+							<th></th>
+			    			<th>Beginner</th>
+			    			<th>Intermediate</th>
+			    			<th>Proficient</th>
+			    			<th>Advanced</th>
+			  			</tr>
+			  			<tr>
+						    <td>Java</td>
+						    <td></td>
+						    <td></td>
+						    <td></td>
+						    <td>X</td>
+					  	</tr>
+					  	<tr>
+					  		<td>Android SDK</td>
+					  		<td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+						    <td>C++</td>
+						    <td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>Python</td>
+					  		<td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>Django</td>
+					  		<td>X</td>
+						    <td></td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>PHP</td>
+					  		<td></td>
+						    <td>X</td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>HTML/CSS</td>
+					  		<td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>Javascript</td>
+					  		<td></td>
+						    <td>X</td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>Bootstrap</td>
+					  		<td></td>
+						    <td>X</td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>JQuery</td>
+					  		<td>X</td>
+						    <td></td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>SQL</td>
+					  		<td>X</td>
+						    <td></td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+				</table>
+				<table style="margin-left: 30px;">
+					<caption>Software</caption>
+						<tr>
+							<th></th>
+			    			<th>Beginner</th>
+			    			<th>Intermediate</th>
+			    			<th>Proficient</th>
+			    			<th>Advanced</th>
+			  			</tr>
+			  			<tr>
+						    <td>Android Studio</td>
+						    <td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>Eclipse</td>
+					  		<td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+						    <td>PyCharm</td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>PhpStorm</td>
+					  		<td></td>
+						    <td>X</td>
+						    <td></td>
+						    <td></td>
+					  	</tr>
+				</table>
+				<table style="margin-left: 30px; margin-top: 30px;">
+					<caption>Development Tools</caption>
+						<tr>
+							<th></th>
+			    			<th>Beginner</th>
+			    			<th>Intermediate</th>
+			    			<th>Proficient</th>
+			    			<th>Advanced</th>
+			  			</tr>
+			  			<tr>
+						    <td>Git</td>
+						    <td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+					  	<tr>
+					  		<td>SVN</td>
+					  		<td></td>
+						    <td></td>
+						    <td>X</td>
+						    <td></td>
+					  	</tr>
+				</table>
+			</div>
+		</div>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
+			setInterval(function() {
+			    $('#dynamic-header').fadeOut(500, function() {
+			        var $this = $(this);
+			        $this.text($this.text() == 'Programmer' ? 'App Developer' : 'Programmer');             
+			        $this.fadeIn(500);
+			    });
+			}, 3000);
+
 			$('#project-btn').click(function(e){
 	 			scrollTo("#projects-wrapper");
 			});
 
 			function scrollTo(id) {
 			  $('html,body').animate({scrollTop: $(id).offset().top}, 'slow');
-			}	
+			}
 		});
 	</script>
 </body>
