added descriptions for each class, added jquery to toggle on hover

--- a/index.html
+++ b/index.html
@@ -122,21 +122,70 @@
 				</span>				
 			</p>
 			<p><b>GPA: 3.51 - Dean's List</b></p>
-			<p style="margin-top: 20px; font-family: monospace;">Related Courses</p>
+			<p style="margin-top: 20px; font-family: monospace;">Related Courses (<b>Hover over a class for a description!</b>)</p>
 			<ul style=" font-family: monospace;">
-				<!-- on hover of li's, say a message whether you liked it or not -->
-				<li>Data Structures and Algorithms I</li>
-				<li>Data Structures and Algorithms II</li>
-				<li>C++ Programming</li>
-				<li>Computer Logic</li>
-				<li>Computer Organization and Assembly Programming</li>
-				<li>Design and Analysis of Algorithms</li>
-				<li>Language Translation and Automata</li>
-				<li>Programming Graphical User Interfaces</li>
-				<li>Python Programming</li>
-				<li>Numerical Methods</li>
+				<li id="class1">Data Structures and Algorithms I</li>
+					<ul id="class1-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>This was a challenging, yet fun class. Linked and array-based data structures, lists, stacks, queues, hashing, searching, recursion, and an introduction to tree structure were the primary subjects of the course.</li>
+						<p>Grade Received: A</p>
+					</ul>
+				<li id="class2">Data Structures and Algorithms II</li>
+					<ul id="class2-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>One of my favorite classes thus far. The data structures that were covered in the course included trees, priority queues, graphs, heaps, sets, and maps. Additionally, sorting algorithms such as Merge, Quick, Bubble, Insertion, Heap, Counting, Selection, and Radix Sort were covered (some more than others). </li>
+						<p>Grade Received: A</p>
+					</ul>
+				<li id="class3">C++ Programming</li>
+					<ul id="class3-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>This was a challenging class for me coming from a Java background; however, it was nice to learn something new. The class covered class encapsulation, inheritance, polymorphism, exception handling, template class, and OOP design all in C++.</li>
+						<p>Grade Received: A</p>
+					</ul>
+				<li id="class4">Computer Logic</li>
+					<ul id="class4-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>Not my favorite class, but I can definitely say I learned alot. We covered boolean algebra with applications to computers and logic design, ALU, flip-flops, and sequential machines.</li>
+						<p>Grade Received: B+</p>
+					</ul>
+				<li id="class5">Computer Organization and Assembly Programming</li>
+					<ul id="class5-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>This class was ALOT of work, but it was well worth the time considering it was mt first time working with Assembly Programming. A large portion of the class revolved around learning the MIPS architecture. Towards the end of the course, we did touch on ARM. Furthermore, we discussed I/O, interrupts, and addressing modes.</li>
+						<p>Grade Received: A-</p>
+					</ul>
+				<li id="class6">Design and Analysis of Algorithms</li>
+					<ul id="class6-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>This was a great class to expand my knowledge on various types of algorithms. Throughout the course, we covered algorithm design techniques including divide-and-conquer, the greedy method, dynamic programming, and backtracking. We also covered Merge Sort, Quick Sort, the Knapsack Problem, the Traveling Salesman, and Dijkstra's Algorithm.</li>
+						<p>Grade Received: A</p>
+					</ul>
+				<li id="class7">Language Translation and Automata</li>
+					<ul id="class7-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>Although an important course for understanding abstract machines, I can't say I enjoyed it! The class consisted of language translation, regular expressions, finite automata, lexical analysis, context-free grammars, and push down automata.</li>
+						<p>Grade Received: B+</p>
+					</ul>
+				<li id="class8">Programming Graphical User Interfaces</li>
+					<ul id="class8-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>Easy and fun class! The class consisted of getting into pairs and creating a variety of games using Swing in Java with the NetBeans IDE.</li>
+						<p>Grade Received: A</p>
+					</ul>
+				<li id="class9">Numerical Methods</li>
+					<ul id="class9-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>This was a very interesting class. We were required to code a spread of mathematical programs, some more fun than others. A description of the class includes error analysis, zeros of a function, systems of linear equations, interpolation, chebyshev approximation, least squares approximation, and numerical integration.</li>
+						<p>Grade Received: B+</p>
+					</ul>
+				<li id="class10">Python Programming</li>
+					<ul id="class10-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>I am currently in this class. Will be updated soon!</li>
+						<p>Grade Received: TBA</p>
+					</ul>
+				<li id="class11">Computer Architecture</li>
+					<ul id="class11-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>I am currently in this class. Will be updated soon!</li>
+						<p>Grade Received: TBA</p>
+					</ul>
+				<li id="class12">Programming Languages</li>
+					<ul id="class12-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
+						<li>I am currently in this class. Will be updated soon!</li>
+						<p>Grade Received: TBA</p>
+					</ul>
 			</ul>
-			<p style="margin-top: 50px;">Skills</p>
+			<p style="margin-top: 50px; font-size: 1.2em; letter-spacing: 0.3em; font-family: impact;">Skills</p>
 			<hr>
 			<table>
 				<caption>Languages and Frameworks</caption>
@@ -288,7 +337,7 @@
 				  	</tr>
 			</table>
 
-			<p style="margin-top: 50px;">Experience</p>
+			<p style="margin-top: 50px; font-size: 1.2em; letter-spacing: 0.3em; font-family: impact;">Experience</p>
 			<hr>
 			<p><b>Reazon Systems, Inc.</b>
 				<span style="float: right;">
@@ -300,8 +349,8 @@
 					<i>Santa Ana, California</i>
 				</span>				
 			</p>
-			<p style="margin-top: 20px;">Accomplishments:</p>
-			<ul style="margin-bottom: 20px;">
+			<p style="margin-top: 20px; font-family: monospace;">Accomplishments:</p>
+			<ul style="margin-bottom: 20px; font-family: monospace;">
 				<!-- on hover of li's, say a message whether you liked it or not -->
 				<li>Converted outdated code to incorporate a responsive design using Bootstrap and ColdFusion</li>
 				<li>Created a custom sidebar to better accomodate all screen sizes</li>
@@ -316,21 +365,21 @@
 					<i>***</i>
 				</span>
 			</p>
-			<p><b>Certificate of Completion:</b><a href="images/certificate.pdf"> Certificate.pdf</a>
+			<p><b>Certificate of Completion:&nbsp&nbsp</b><a href="images/certificate.pdf">Certificate.pdf</a>
 				<span style="float: right;">
 					<i>Pomona, California</i>
 				</span>
 			</p>
-			<p style="margin-top: 20px;">Source Code:</p>	
-			<ul style="margin-bottom: 20px;">
+			<p style="margin-top: 20px; font-family: monospace;">Source Code:</p>	
+			<ul style="margin-bottom: 20px; font-family: monospace;">
 				<li>***</li>
 			</ul>
-			<p>Accomplishments:</p>
-			<ul>
+			<p style="font-family: monospace;">Accomplishments:</p>
+			<ul style="font-family: monospace;">
 				<li>Responsible for completing pre-work before the initial workshop date</li>
 				<ul>
-					<li>Implementing a certain data structure</li>
-					<li>Creating the basic layout in Android Studio</li>
+					<li>Implement a certain data structure</li>
+					<li>Create the basic layout for the future workshop in Android Studio</li>
 				</ul>
 				<li>Completed one app for each workshop using various data structures</li>
 				<li>Participated in a 'hackathon' type setting</li>
@@ -344,10 +393,13 @@
 	<div style="background-color: #eee; overflow: auto;" id="code-wrapper"> <!-- start of code section -->
 		<h1 style="color: #000000; margin-bottom: 50px;">Code</h1>
 		<div style="margin: 0 auto; width: 1000px;" id="code-example-1">
-			<p><b>Calculating a Chebyshev Polynomial - Dynamic Programming</b>
-				<span style="float: right;"><i>Code Example 1</i></span>
+			<p><b style="font-size: 1.1em; letter-spacing: 0.1em;">Calculating a Chebyshev Polynomial - Dynamic Programming</b>
+				<span style="float: right;"><i style="font-family: monospace; font-size: 1.1em;">Code Example 1</i></span>
 			</p>
-			<p style="background-color: #FFFFFF; padding: 15px;">***</p>
+			<div style="background-color: #FFFFFF; padding: 15px; font-family: monospace;">
+			<p>Chebyshev polynomials are a set of orthogonal polynomials used to approximate the best fit line given various data points. Additionally, they are connected with trigonometric mutiple-angle formulas.</p>
+			<p>The following program will calculate a Chebyshev Polynomial up to whatever the user enters. My approach was to use dynamic programming to calculate the polynomials above n = 1 due to the fact that the calculations are often repeated otherwise. With this method, calculating an extremely big n takes no more than a few milliseconds because we are building off of our previous calculations.</p>
+			</div>
 		</div>
 		<pre style="margin: 0 auto; margin-bottom: 100px; width: 1000px; height: 500px;">
 			<code>
@@ -446,10 +498,15 @@
 		</pre>
 
 		<div style="margin: 0 auto; width: 1000px;" id="code-example-2">
-			<p><b>Picture Organizer - A Python Program</b>
-				<span style="float: right;"><i>Code Example 2</i></span>
+			<p><b style="font-size: 1.1em; letter-spacing: 0.1em;">Picture Organizer - A Python Program</b>
+				<span style="float: right; font-size: 1.1em;"><i>Code Example 2</i></span>
 			</p>
-			<p style="background-color: #FFFFFF; padding: 15px;">***</p>
+			<div style="background-color: #FFFFFF; padding: 15px; font-family: monospace;">
+			<p>The following program will transfer all my pictures from my camera to their appropriate directories. Using the Tkinter module, it will pop up a small window allowing me to enter what I want to name the folder containing all of my new pictures. If the file I have entered has already been created, it will just go further into the subdirectories.</p>
+			<p>The files are stored in the following format:
+			E: \ My Digital Camera Pictures \ [Year] Pictures \ [Year] [Month]-[Day]-[Year] - [File Name I Give]\[All Pictures Go Here]</p>
+			<p>I wrote this program mainly to save time and ensure I wouldn't have to rename each picture with their appropriate timestamps.</p>
+			</div>
 		</div>
 		<pre style="margin: 0 auto; margin-bottom: 100px; width: 1000px; height: 500px;">
 			<code>
@@ -542,17 +599,45 @@
 
 	<script type="text/javascript">
 		$(document).ready(function() {
+			// changes word in jumbotron
 			setInterval(function() {
 			    $('#dynamic-header').fadeOut(500, function() {
 			        var $this = $(this);
 			        $this.text($this.text() == 'Programmer' ? 'App Developer' : 'Programmer');             
 			        $this.fadeIn(500);
 			    });
-			}, 3000);
+			}, 2600);
 
+			// set mouse hover for resume class descriptions
+			setResumeHoverCSS("#class1","#class1-desc");
+			setResumeHoverCSS("#class2","#class2-desc");
+			setResumeHoverCSS("#class3","#class3-desc");
+			setResumeHoverCSS("#class4","#class4-desc");
+			setResumeHoverCSS("#class5","#class5-desc");
+			setResumeHoverCSS("#class6","#class6-desc");
+			setResumeHoverCSS("#class7","#class7-desc");
+			setResumeHoverCSS("#class8","#class8-desc");
+			setResumeHoverCSS("#class9","#class9-desc");
+			setResumeHoverCSS("#class10","#class10-desc");
+			setResumeHoverCSS("#class11","#class11-desc");
+			setResumeHoverCSS("#class12","#class12-desc");
+
+			// set button autoscrolls
 			setButtonClick("#project-btn", "#project-wrapper");
 			setButtonClick("#resume-btn", "#resume-wrapper");
 			setButtonClick("#code-btn", "#code-wrapper");
+
+			function setResumeHoverCSS(listID, spanID) {
+				$(listID).mouseenter(function() {
+					$(spanID).toggleClass("hidden-xs").toggleClass("hidden-sm")
+						.toggleClass("hidden-md").toggleClass("hidden-lg");
+				});
+
+				$(listID).mouseleave(function() {
+					$(spanID).toggleClass("hidden-xs").toggleClass("hidden-sm")
+						.toggleClass("hidden-md").toggleClass("hidden-lg");
+				});
+			}
 
 			function setButtonClick(btnID, id) {
 				$(btnID).on('click', function(e) {
