added color to tables

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<div style="background-color: #eee; overflow: auto;" id="project-wrapper">
 		<h1 style="margin-bottom: 20px; color: #000000;">Projects</h1>
-		<div style="max-width: 1100px; height: 450px; margin: 0 auto; text-align: center; background-color: aquamarine; overflow: auto;" id="horde-clicker">
+		<div style="max-width: 1100px; height: 450px; margin: 0 auto; text-align: center; background-color: #ffcccc; overflow: auto;" id="horde-clicker">
 			<div style="margin-top: 20px; margin-bottom: 30px;">
 				<img height="100px" width="200px" src="images/clickerlogo.png">
 			</div>
@@ -81,7 +81,7 @@
 
 		<hr>
 
-		<div style="max-width: 1100px; height: 450px; margin: 0 auto; text-align: center; background-color: aquamarine; overflow: auto;" id="fact-hack">
+		<div style="max-width: 1100px; height: 450px; margin: 0 auto; text-align: center; background-color: #b2d8b2; overflow: auto;" id="fact-hack">
 			<div style="margin-top: 20px; margin-bottom: 30px;">
 				<img height="100px" width="300px" src="images/facthacklogo.png">
 			</div>
@@ -146,7 +146,7 @@
 					</ul>
 				<li id="class5">Computer Organization and Assembly Programming</li>
 					<ul id="class5-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
-						<li>This class was ALOT of work, but it was well worth the time considering it was mt first time working with Assembly Programming. A large portion of the class revolved around learning the MIPS architecture. Towards the end of the course, we did touch on ARM. Furthermore, we discussed I/O, interrupts, and addressing modes.</li>
+						<li>This class was ALOT of work, but it was well worth the time considering it was my first time working with Assembly Programming. A large portion of the class revolved around learning the MIPS architecture. Towards the end of the course, we did touch on ARM. Furthermore, we discussed I/O, interrupts, and addressing modes.</li>
 						<p>Grade Received: A-</p>
 					</ul>
 				<li id="class6">Design and Analysis of Algorithms</li>
@@ -197,78 +197,85 @@
 		    			<th>Advanced</th>
 		  			</tr>
 		  			<tr>
-					    <td>Java</td>
+					    <td class="advanced">Java</td>
 					    <td></td>
 					    <td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 				  	</tr>
 				  	<tr>
-				  		<td>Android SDK</td>
+				  		<td class="proficient">Android SDK</td>
 				  		<td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>Python</td>
+				  		<td class="proficient">Python</td>
 				  		<td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>HTML/CSS</td>
+				  		<td class="proficient">HTML/CSS</td>
 				  		<td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-					    <td>C++</td>
+					    <td class="intermediate">C++</td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>PHP</td>
+				  		<td class="intermediate">PHP</td>
 				  		<td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>Bootstrap</td>
+				  		<td class="intermediate">Bootstrap</td>
 				  		<td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
+				  	</tr>
+				  	<tr>
+				  		<td class="beginner">Swift</td>
+				  		<td class="class-x">X</td>
+				  		<td></td>
+				  		<td></td>
+				  		<td></td>
 				  	</tr>					  	
 				  	<tr>
-				  		<td>Django</td>
-				  		<td>X</td>
+				  		<td class="beginner">Django</td>
+				  		<td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
 					    <td></td>
 				  	</tr>					  						  	
 				  	<tr>
-				  		<td>Javascript</td>
-				  		<td>X</td>
+				  		<td class="beginner">Javascript</td>
+				  		<td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
 					    <td></td>
 				  	</tr>					  	
 				  	<tr>
-				  		<td>JQuery</td>
-				  		<td>X</td>
+				  		<td class="beginner">JQuery</td>
+				  		<td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>SQL</td>
-				  		<td>X</td>
+				  		<td class="beginner">SQL</td>
+				  		<td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
 					    <td></td>
@@ -284,32 +291,46 @@
 		    			<th>Advanced</th>
 		  			</tr>
 		  			<tr>
-					    <td>Android Studio</td>
+					    <td class="proficient">Android Studio</td>
 					    <td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>Eclipse</td>
+				  		<td class="proficient">Eclipse</td>
 				  		<td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-					    <td>PyCharm</td>
+					    <td class="intermediate">PyCharm</td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>PhpStorm</td>
+				  		<td class="intermediate">PhpStorm</td>
 				  		<td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 					    <td></td>
+				  	</tr>
+				  	<tr>
+				  		<td class="intermediate">NetBeans</td>
+				  		<td></td>
+				  		<td class="class-x">X</td>
+				  		<td></td>
+				  		<td></td>
+				  	</tr>
+				  	<tr>
+				  		<td class="beginner">XCode</td>
+				  		<td class="class-x">X</td>
+				  		<td></td>
+				  		<td></td>
+				  		<td></td>
 				  	</tr>
 			</table>
 			<table style="margin-top: 20px;">
@@ -322,17 +343,17 @@
 		    			<th>Advanced</th>
 		  			</tr>
 		  			<tr>
-					    <td>Git</td>
+					    <td class="proficient">Git</td>
 					    <td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 				  	</tr>
 				  	<tr>
-				  		<td>SVN</td>
+				  		<td class="proficient">SVN</td>
 				  		<td></td>
 					    <td></td>
-					    <td>X</td>
+					    <td class="class-x">X</td>
 					    <td></td>
 				  	</tr>
 			</table>
@@ -627,16 +648,20 @@
 			setButtonClick("#resume-btn", "#resume-wrapper");
 			setButtonClick("#code-btn", "#code-wrapper");
 
-			function setResumeHoverCSS(listID, spanID) {
+			function setResumeHoverCSS(listID, descID) {
 				$(listID).mouseenter(function() {
-					$(spanID).toggleClass("hidden-xs").toggleClass("hidden-sm")
+					$(descID).toggleClass("hidden-xs").toggleClass("hidden-sm")
 						.toggleClass("hidden-md").toggleClass("hidden-lg");
 				});
 
 				$(listID).mouseleave(function() {
-					$(spanID).toggleClass("hidden-xs").toggleClass("hidden-sm")
+					$(descID).toggleClass("hidden-xs").toggleClass("hidden-sm")
 						.toggleClass("hidden-md").toggleClass("hidden-lg");
 				});
+			}
+
+			function scrollTo(id) {
+			  $('html,body').animate({scrollTop: $(id).offset().top}, 'slow');
 			}
 
 			function setButtonClick(btnID, id) {
@@ -644,10 +669,6 @@
 					scrollTo(id);
 					return false;
 				});
-			}
-
-			function scrollTo(id) {
-			  $('html,body').animate({scrollTop: $(id).offset().top}, 'slow');
 			}
 		});
 	</script>
