changed spacing between major sections

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 			<p>If you continue on, you will find information on some personal projects I have done, take a look at my most up to date resume, and find my contact information.</p>
 			<p>Thank you!</p>
 		</div>
-		<div class="col-xs-12 col-md-3" id="image-container">
+		<div class="col-xs-12 col-md-3" id="intro-pic">
 			<img height="300px" width="300px" src="images/me.jpg">
 		</div>
 		<div class="col-md-1"></div>
 	</div>
 
 	<div id="project-wrapper"> <!-- start of project wrapper -->
-		<h1>Projects</h1>
+		<h1 class="section-spacing-top section-spacing-bottom">Projects</h1>
 		<div id="horde-clicker">
 			<div class="project-logo">
 				<img height="100px" width="200px" src="images/clickerlogo.png">
@@ -107,7 +107,7 @@
 	</div> <!-- end of project wrapper -->
 
 	<div id="resume-wrapper"> <!-- start of resume -->
-		<h1>Resume</h1>
+		<h1 class="section-spacing-top section-spacing-bottom">Resume</h1>
 		<div id="resume-container">
 			<p class="resume-part-title">EDUCATION</p>
 			<hr>
@@ -122,7 +122,7 @@
 				</span>				
 			</p>
 			<p><b>GPA: 3.51 - Dean's List</b></p>
-			<div class="resume-desc">
+			<div class="section-spacing-top-xs resume-desc">
 				<p>Related Courses (<b>Hover over a class for a description!</b>)</p>
 				<ul>
 					<li id="class1">Data Structures and Algorithms I</li>
@@ -187,7 +187,7 @@
 						</ul>
 				</ul>
 			</div>
-			<p class="resume-part-title">Skills</p>
+			<p class="section-spacing-top resume-part-title">Skills</p>
 			<hr>
 			<table>
 				<caption>Languages and Frameworks</caption>
@@ -283,7 +283,7 @@
 					    <td></td>
 				  	</tr>
 			</table>
-			<table>
+			<table class="section-spacing-top-small">
 				<caption>Software</caption>
 					<tr>
 						<th></th>
@@ -335,7 +335,7 @@
 				  		<td></td>
 				  	</tr>
 			</table>
-			<table>
+			<table class="section-spacing-top-small">
 				<caption>Development Tools</caption>
 					<tr>
 						<th></th>
@@ -360,7 +360,7 @@
 				  	</tr>
 			</table>
 
-			<p class="resume-part-title">Experience</p>
+			<p class="section-spacing-top resume-part-title">Experience</p>
 			<hr>
 			<p><b>Reazon Systems, Inc.</b>
 				<span class="resume-italic-section">
@@ -372,7 +372,7 @@
 					<i>Santa Ana, California</i>
 				</span>				
 			</p>
-			<div class="resume-desc">
+			<div class="section-spacing-top-xs section-spacing-bottom-small resume-desc">
 				<p>Accomplishments:</p>
 				<ul>
 					<!-- on hover of li's, say a message whether you liked it or not -->
@@ -395,9 +395,9 @@
 					<i>Pomona, California</i>
 				</span>
 			</p>
-			<div class="resume-desc"> <!-- start of resume-desc -->
+			<div class="section-spacing-top-xs section-spacing-bottom-lg resume-desc"> <!-- start of resume-desc -->
 				<p>Source Code:</p>	
-				<ul>
+				<ul class="section-spacing-bottom-xs">
 					<li>***</li>
 				</ul>
 				<p>Accomplishments:</p>
@@ -418,7 +418,7 @@
 	</div> <!-- end of resume -->
 
 	<div id="code-wrapper"> <!-- start of code section -->
-		<h1>Code</h1>
+		<h1 class="section-spacing-top section-spacing-bottom">Code</h1>
 		<div class="code-example">
 			<p><b>Calculating a Chebyshev Polynomial - Dynamic Programming</b>
 				<span><i>Code Example 1</i></span>
