added mixtape maker project, with images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  	<link rel="stylesheet" type="text/css" href="index.css?version=4">
+  	<link rel="stylesheet" type="text/css" href="index.css?version=5">
 </head>
 <body>
 	<nav class="navbar navbar-default" role="navigation">
@@ -25,7 +25,7 @@
 	      			<li id="project-btn"><a href="#">Projects</a></li>
 	      			<li id="resume-btn"><a href="#">Resume</a></li>
 	      			<li id="code-btn"><a href="#">Code</a></li>
-				   	<li id="contact-btn" style="border-right: 1px solid #4C5364"><a href="#">Contact</a></li>
+				   	<li id="contact-btn"><a href="#">Contact</a></li>
 	    		</ul>
     		</div>
 		</div>
@@ -104,6 +104,31 @@
 			</ul>
 			<p>The app can be downloaded at <a href="https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts">https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts</a>&nbsp&nbsp:)
 		</div>
+
+		<hr>
+
+		<div id="mixtape-maker">
+			<div id="mixtape-logo">
+				<img height="200px" width="300px" src="images/mixtapelogo.png">
+			</div>
+			<div>
+				<img height="275px" width="300px" src="images/mixtapepic1.png"> ===>>
+				<img height="275px" width="350px" src="images/mixtapepic2.png"> ===>>
+				<img height="275px" width="300px" src="images/mixtapepic3.png">
+			</div>
+		</div>
+		<div class="project-desc">
+			<h5>An entertainment app that lets you look at thousands of categorized facts. Some features include a nice swipe left/right feature for easy readability, a daily fact updated each day, a favoriting system to view only the facts you enjoy the most, and finally a statistics area to see all the knowledge you have gained!</h5>
+			<p>What I Learned:</p>
+			<ul>
+				<li>How to build a custom web crawler in Eclipse using a Java HTML Parser</li>
+				<li>How to organize my data into a PostgreSQL database and execute commands using JDBC</li>
+				<li>Creating a variety of PHP scripts in PhpStorm to return JSON formatted objects</li>
+				<li>Understanding of HTTP methods and how to use an HTTP Client library</li> 
+			</ul>
+			<p>The app can be downloaded at <a href="https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts">https://play.google.com/store/apps/details?id=com.michaelmuinosyahoo.facts</a>&nbsp&nbsp:)
+		</div>
+		<div class="section-spacing-top-lg"></div>
 	</div> <!-- end of project wrapper -->
 
 	<div id="resume-wrapper"> <!-- start of resume -->
